--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="victorAcosta" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="victorAcosta" content="width=device-width, initial-scale=1.0"> -->
     <title>ventas de zapatos</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
+<meta name\=“viewport” content\=“width=device-width, user-scable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0”>
     <link rel="stylesheet" href="grid.css">
 </head>
 <body>
