resposive de novedades.html

--- a/novedades.html
+++ b/novedades.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="victorAcosta" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>novedades</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,6 +22,7 @@
             </nav>
         </div>
     </header> <!--fin del header-->
+    <div class="responsive">
     <section class="novedades1">
 
         <div class="titulo1"><h2 class="subt">lo nuevo para las chicas</h2></div>
@@ -39,6 +40,7 @@
 
         
     </section>
+    </div>
     <footer> <!--comienza el footer-->
         <div class="footer">        
             
