--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- <meta name="victorAcosta" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, user-scable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>ventas de zapatos</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
-<meta name\=“viewport” content\=“width=device-width, user-scable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0”>
-    <link rel="stylesheet" href="grid.css">
+<link rel="stylesheet" href="grid.css">
 </head>
 <body>
     <header>                                       <!--comienza el header-->
@@ -36,7 +35,7 @@
                     <a href="productos.html"><img src="imagenes/sandalias4.jpeg" alt="sandalias3"></a>
                     <p>parrafo</p>
                 </div>
-                <div>
+                <div class="hidden">
                     <a href="productos.html"><img src="imagenes/borcegodama5.jpeg" alt="borcegodama4"></a>
                     <p>parrafo</p>
                 </div>
@@ -47,7 +46,7 @@
                     <a href="index.html"><img src="imagenes/zapatos3.jpeg" alt="zapatos3"></a>
                     <p>parrafo</p>
                 </div>
-                <div>
+                <div class="hidden">
                     <a href="index.html"><img src="imagenes/borcegochico2.jpeg" alt="borcegochico2"></a>
                     <p>parrafo</p>
                 </div>
