--- a/iniciar.html
+++ b/iniciar.html
@@ -8,7 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="grid.css">
 </head>
-<body class=" bodyiniciar">
+<body>
     <header> <!--comienza el header-->
         <div class="titulo">
             <h1>ventas de zapatos</h1>
@@ -31,47 +31,7 @@
             <input class="inpt" type="password" name="contraseña" id="contraseñas" placeholder="ingrese su contraseña">
             <input class="inptbtn" type="submit" value="registrar">
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-            <!-- <form action="">
-                <ul>
-                    <li>                
-                        <label for="nombre">nombre</label>
-                        <input type="text" placeholder="marco polo" required></li>
-                    <li>                
-                        <label for="email">email</label>
-                        <input type="email" required></li>
-                    <li>                
-                        <label for="edad">edad</label>
-                        <input type="number" required></li>
-                        <button>registrarte</button>
-                </ul>
-                
-
-
-            </form> -->
-
-
-
     </section>
-    <!-- <br><br><br><br><br><br><br><br> -->
     <footer> <!--comienza el footer-->
         <div class="footer">        
              
