--- a/productos.html
+++ b/productos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta name=“victorAcosta” content=“width=device-width, user-scable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0”>
+    <meta name="viewport" content="width=device-width, user-scable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>productos</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
