--- a/index.html
+++ b/index.html
@@ -32,29 +32,29 @@
         <div id="modelopadre">
             <div class="dama">                 <!--aqui cambie un id-->
                 <div>
-                    <a href="productos.html"><img src="imagenes/sandalias4.jpeg" alt="sandalias3"></a>
+                    <a href="productos.html"><img class="scale__img" src="imagenes/sandalias4.jpeg" alt="sandalias3"></a>
                     <p>parrafo</p>
                 </div>
                 <div class="hidden">
-                    <a href="productos.html"><img src="imagenes/borcegodama5.jpeg" alt="borcegodama4"></a>
+                    <a href="productos.html"><img class="scale__img" src="imagenes/borcegodama5.jpeg" alt="borcegodama4"></a>
                     <p>parrafo</p>
                 </div>
             </div>
             
             <div class="hombre">                   <!--aqui cambie un id-->
                 <div>
-                    <a href="index.html"><img src="imagenes/zapatos3.jpeg" alt="zapatos3"></a>
+                    <a href="index.html"><img class="scale__img" src="imagenes/zapatos3.jpeg" alt="zapatos3"></a>
                     <p>parrafo</p>
                 </div>
                 <div class="hidden">
-                    <a href="index.html"><img src="imagenes/borcegochico2.jpeg" alt="borcegochico2"></a>
+                    <a href="index.html"><img class="scale__img" src="imagenes/borcegochico2.jpeg" alt="borcegochico2"></a>
                     <p>parrafo</p>
                 </div>
             </div>
         </div>
         <div class="texto">    
-            <div><p>dama</p></div>
-            <div><p>caballero</p></div>
+            <div><p>damas</p></div>
+            <div><p>caballeros</p></div>
         </div>      
     </section>       
                              <!--fin de muestras-->
