--- a/productos.html
+++ b/productos.html
@@ -27,32 +27,32 @@
         <div class="pTitulo"><h2 class="subt">zapatillas</h2></div>
 
         <div class="card1">
-            <img class="" src="imagenes/zapatillas1.jpeg" alt="zapatillas1">
+            <img class="scale__img" src="imagenes/zapatillas1.jpeg" alt="zapatillas1">
             <P>valor</P>
         </div>
 
         <div class="card2">
-            <img src="imagenes/zapatillas2.1.jpeg" alt="zapatillas2.1">
+            <img class="scale__img" src="imagenes/zapatillas2.1.jpeg" alt="zapatillas2.1">
             <p>valor</p>
         </div>
 
         <div class="card3">
-            <img src="imagenes/zapatillas2.2.jpeg" alt="zapatillas2.2"> 
+            <img class="scale__img" src="imagenes/zapatillas2.2.jpeg" alt="zapatillas2.2"> 
             <p>valor</p>
         </div>
 
         <div class="card4">
-            <img src="imagenes/zapatillas2.jpeg" alt="zapatillas2.jpeg">
+            <img class="scale__img" src="imagenes/zapatillas2.jpeg" alt="zapatillas2.jpeg">
             <p>valor</p>
         </div>
 
         <div class="card5">
-            <img src="imagenes/zapatillas4.jpeg" alt="zapatillas4.jpeg">
+            <img class="scale__img" src="imagenes/zapatillas4.jpeg" alt="zapatillas4.jpeg">
 
             <p>valor</p>
         </div>
         <div class="card6">
-            <img src="imagenes/zapatillas3.jpeg" alt="zapatillas3.jpeg"> 
+            <img class="scale__img" src="imagenes/zapatillas3.jpeg" alt="zapatillas3.jpeg"> 
             <p>valor</p> 
         </div>        
 
@@ -64,47 +64,47 @@
             <h2 class="subt">damas</h2>
         </div>
         <div class="card7">
-            <img src="imagenes/sandalias4.jpeg" alt="sandalias4.jpeg">
+            <img class="scale__img" src="imagenes/sandalias4.jpeg" alt="sandalias4.jpeg">
             <p>valor</p>
         </div>
         <div class="card8">
-            <img src="imagenes/sandalias5.jpeg" alt="sandalias5.jpeg">
+            <img class="scale__img" src="imagenes/sandalias5.jpeg" alt="sandalias5.jpeg">
             <p>valor</p>
         </div>
         <div class="card9">
-            <img src="imagenes/sandalias6.jpeg" alt="sandalias6.jpeg">
+            <img class="scale__img" src="imagenes/sandalias6.jpeg" alt="sandalias6.jpeg">
             <p>valor</p>
         </div>
         <div class="card10">
-            <img src="imagenes/sandalias7.jpeg" alt="sandalias7.jpeg">
+            <img class="scale__img" src="imagenes/sandalias7.jpeg" alt="sandalias7.jpeg">
             <p>valor</p>
         </div>
         <div class="card11">
-            <img src="imagenes/sandalias8.jpeg" alt="sandalias8.jpeg">
+            <img class="scale__img" src="imagenes/sandalias8.jpeg" alt="sandalias8.jpeg">
             <p>valor</p>
         </div>
         <div class="card12">
-            <img src="imagenes/borcegodama1.jpeg" alt="borcegodama1.jpeg">
+            <img class="scale__img" src="imagenes/borcegodama1.jpeg" alt="borcegodama1.jpeg">
             <p>valor</p>
         </div>
         <div class="card13">
-            <img src="imagenes/borcegodama2.jpeg" alt="borcegodama2.jpeg">
+            <img class="scale__img" src="imagenes/borcegodama2.jpeg" alt="borcegodama2.jpeg">
             <p>valor</p>
         </div>
         <div class="card14">
-            <img src="imagenes/borcegodama3.jpeg" alt="borcegodama3">
+            <img class="scale__img" src="imagenes/borcegodama3.jpeg" alt="borcegodama3">
             <p>valor</p>
         </div>
         <div class="card15">
-            <img src="imagenes/borcegodama4.jpeg" alt="borcegodama4">
+            <img class="scale__img" src="imagenes/borcegodama4.jpeg" alt="borcegodama4">
             <p>valor</p>
         </div>
         <div class="card16">
-            <img src="imagenes/borcegodama5.jpeg" alt="borcegodama5">
+            <img class="scale__img" src="imagenes/borcegodama5.jpeg" alt="borcegodama5">
             <p>valor</p>
         </div>
         <div class="card17">
-            <img src="imagenes/borcegodama6.jpeg" alt="borcegodama6">
+            <img class="scale__img" src="imagenes/borcegodama6.jpeg" alt="borcegodama6">
             <p>valor</p>
         </div>          
         
@@ -117,43 +117,43 @@
             <p>valor</p>
         </div>
         <div class="card19">
-            <img src="imagenes/zapatos1.jpeg" alt="zapatos1">
+            <img class="scale__img" src="imagenes/zapatos1.jpeg" alt="zapatos1">
             <p>valor</p>
         </div>
         <div class="card20">
-            <img src="imagenes/zapatos2.jpeg" alt="zapatos2">
+            <img class="scale__img" src="imagenes/zapatos2.jpeg" alt="zapatos2">
             <p>valor</p>
         </div>
         <div class="card21">
-            <img src="imagenes/zapatos3.jpeg" alt="zapatos3">
+            <img class="scale__img" src="imagenes/zapatos3.jpeg" alt="zapatos3">
             <p>valor</p>
         </div>
         <div class="card22">
-            <img src="imagenes/zapatos4.jpeg" alt="zapatos4">
+            <img class="scale__img" src="imagenes/zapatos4.jpeg" alt="zapatos4">
             <p>valor</p>
         </div>
         <div class="card23">
-            <img src="imagenes/zapatos5.jpeg" alt="zapatos5">
+            <img class="scale__img" src="imagenes/zapatos5.jpeg" alt="zapatos5">
             <p>valor</p>
         </div>
         <div class="card24">
-            <img src="imagenes/borcegochico1.jpeg" alt="borcegochico1">
+            <img class="scale__img" src="imagenes/borcegochico1.jpeg" alt="borcegochico1">
             <p>valor</p>
         </div>
         <div class="card25">
-            <img src="imagenes/borcegochico2.jpeg" alt="borcegochico2">
+            <img class="scale__img" src="imagenes/borcegochico2.jpeg" alt="borcegochico2">
             <p>valor</p>
         </div>
         <div class="card26">
-            <img src="imagenes/borcegochico3.jpeg" alt="borcegochico3">
+            <img class="scale__img" src="imagenes/borcegochico3.jpeg" alt="borcegochico3">
             <p>valor</p>
         </div>
         <div class="card27">
-            <img src="imagenes/borcegochico4.jpeg" alt="borcegochico4">
+            <img class="scale__img" src="imagenes/borcegochico4.jpeg" alt="borcegochico4">
             <p>valor</p>
         </div>
         <div class="card28">
-            <img src="imagenes/borcegochico5.jpeg" alt="borcegochico5">
+            <img class="scale__img" src="imagenes/borcegochico5.jpeg" alt="borcegochico5">
             <p>valor</p>
         </div>
             
